--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -84,7 +84,8 @@ header {
 
 header h1 {
   font-family: 'Monofett', cursive;
-  font-size: 1em;
+  font-size: 5em;
+  font-weight: strong;
 }
 
 main {
