--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Just Tech News</title>
+    <title>the TECH blog</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Monofett&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css">
@@ -16,6 +16,10 @@
             <h1>
                 <a href="/">the TECH blog</a>
             </h1>
+            <nav>
+                <button id="logout" class="btn-no-style">logout</button>
+                <a href="/login">login</a>
+            </nav>
         </header>
         <main>
             {{{ body }}}
@@ -24,7 +28,7 @@
             Thanks for visiting!
         </footer>
     </div>
-
+    <script src="/javascript/logout.js"></script>
 </body>
 
 </html>
