--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -10,6 +10,7 @@
         <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
     </div>
 </article>
+{{#if loggedIn}}
 <form class="comment-form">
     <div>
         <textarea name="comment-body"></textarea>
@@ -19,7 +20,7 @@
         <button type="submit">add comment</button>
     </div>
 </form>
-
+{{/if}}
 <div class="comments">
     {{#each post.comments}}
     <section class="comment">
@@ -32,4 +33,6 @@
     </section>
     {{/each}}
 </div>
+{{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
+{{/if}}
