--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,8 +17,11 @@
                 <a href="/">the TECH blog</a>
             </h1>
             <nav>
+                {{#if loggedIn}}
                 <button id="logout" class="btn-no-style">logout</button>
+                {{else}}
                 <a href="/login">login</a>
+                {{/if}}
             </nav>
         </header>
         <main>
@@ -28,7 +31,9 @@
             Thanks for visiting!
         </footer>
     </div>
+    {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
