--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,7 @@
 <ol class="post-list">
     {{#each posts as |post|}}
     <li>
-        <article class="post">
-            <div class="title">
-                <a href="/post/{{post.id}}">{{post.title}}</a>
-                <p>({{post.post_body}})</p>
-            </div>
-            <div class="meta">
-                by {{post.user.username}} on
-                {{post.created_at}}
-                |
-                <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
-            </div>
-        </article>
+        {{> post-info post }}
     </li>
     {{/each}}
 </ol>
