--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,15 +1,4 @@
-<article class="post">
-    <div class="title">
-        <h2>{{post.title}}</h2>
-        ({{post.post_body}})
-        <br><br>
-    </div>
-    <div class="meta">
-        by {{post.user.username}} on {{post.created_at}}
-        |
-        <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
-    </div>
-</article>
+{{> post-info post}}
 {{#if loggedIn}}
 <form class="comment-form">
     <div>
@@ -21,18 +10,7 @@
     </div>
 </form>
 {{/if}}
-<div class="comments">
-    {{#each post.comments}}
-    <section class="comment">
-        <div class="meta">
-            {{user.username}} on {{created_at}}
-        </div>
-        <div class="text">
-            {{comment_text}}
-        </div>
-    </section>
-    {{/each}}
-</div>
+{{> comments post.comments}}
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
 {{/if}}
