Created a working post form on dashboard.

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,11 +1,11 @@
 <article class="post">
     <div class="title">
-        <h2>{{title}}</h2>
+        <h3>{{title}}</h3>
         ({{post_body}})
         <br><br>
     </div>
     <div class="meta">
-        by {{user.username}} on {{format_date created_at}}
+        By {{user.username}} on {{format_date created_at}}
         |
         <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
     </div>
