--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,7 @@
 <article class="post">
     <div class="title">
         <h3>{{title}}</h3>
-        ({{post_body}})
+        {{post_body}}
         <br><br>
     </div>
     <div class="meta">
