--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
-<ol class="post-list">
+<div class="post-list">
     {{#each posts as |post|}}
-    <li>
+    <section>
         {{> post-info post }}
-    </li>
+    </section>
     {{/each}}
-</ol>
+</div>
