--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,6 @@
 <article class="post">
     <div class="title">
-        <h3>{{title}}</h3>
+        <h3><a href="/post/{{id}}">{{title}}</a></h3>
         {{post_body}}
         <br><br>
     </div>
