--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-
     <header>
+        <div class="right"></div>
         <h1>
             <a href="/"><span class="headbracket">{ </span><span class="headmini">the</span>TECH<span
                     class="headmini">blog</span><span class="headbracket"> }</span></a>
