--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="right"></div>
+        <div class="right"><a href="/">homepage</a></div>
         <h1>
             <a href="/"><span class="headbracket">{ </span><span class="headmini">the</span>TECH<span
                     class="headmini">blog</span><span class="headbracket"> }</span></a>
@@ -33,10 +33,17 @@
 
         {{{ body }}}
 
-        <BR><BR>
+
     </main>
     <footer>
+        {{#if loggedIn}}
+        <span class="welcome">Welcome
+            {{user.username}}!</span>
+        <br><span class="logged-in">You are logged in.</span>
+        {{else}}
         Thanks for visiting!
+        {{/if}}<br>
+        <span class="copy">© the TECH blog</span>
     </footer>
 
     {{#if loggedIn}}
