--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,27 +1,22 @@
-<form class="login-form">
-    <div>
-        <label for="username-login">username:</label>
-        <input type="text" id="username-login" />
-    </div>
-    <div>
-        <label for="password-login">password:</label>
-        <input type="password" id="password-login" />
-    </div>
-    <div>
-        <button type="submit">login</button>
-    </div>
-</form>
-<form class="signup-form">
-    <div>
-        <label for="username-signup">username:</label>
-        <input type="text" id="username-signup" />
-    </div>
-    <div>
-        <label for="password-signup">password:</label>
-        <input type="password" id="password-signup" />
-    </div>
-    <div>
-        <button type="submit">signup</button>
-    </div>
-</form>
-<script src="/javascript/login.js"></script>
+<div class="form-center">
+    <section>
+        <form class="login-form">
+            <div>
+                <label for="username-login">username:</label>
+                <input type="text" id="username-login" />
+            </div>
+            <div>
+            </div>
+            <div>
+                <label for="password-login">password:</label>
+                <input type="password" id="password-login" />
+            </div>
+            <div>
+                <button type="submit">login</button>
+            </div>
+        </form>
+        <br>
+        No account? <a href="/signup">Sign up</a> instead!
+        <script src="/javascript/login.js"></script>
+    </section>
+</div>
