--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,40 +1,46 @@
-<section class="form-center">
-    <article>
-        <a href="/dashboard"> &larr; Back to dashboard</a>
-        <h2>
-            Edit Post
-        </h2>
-        <form class="edit-post-form">
+<section>
+    <div class="container">
+        <article>
+            <a href="/dashboard"> &larr; Back to dashboard</a>
+            <h2>
+                Edit Post
+            </h2>
+            <form class="edit-post-form">
 
-            <div>
-                <input name="post-title" type="text" value="{{post.title}}" />
-            </div>
-            <div>
-                <textarea name="post-body" type="text" value="{{post.post_body}}" />{{post.post_body}}</textarea><br>
-            </div>
-            <div>
-                By you on {{format_date post.created_at}}
-                |
-                <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment"
-                    post.comments.length}}</a>
-            </div>
-            <button type="submit">Save post</button>
-            <button type="button" class="delete-post-btn">Delete post</button>
-        </form>
-    </article>
+                <div>
+                    <input name="post-title" type="text" value="{{post.title}}" />
+                </div>
+                <div>
+                    <textarea name="post-body" type="text"
+                        value="{{post.post_body}}" />{{post.post_body}}</textarea><br>
+                </div>
+                <div>
+                    By you on {{format_date post.created_at}}
+                    |
+                    <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment"
+                        post.comments.length}}</a>
+                </div>
+                <button type="submit">Save post</button>
+                <button type="button" class="delete-post-btn">Delete post</button>
+            </form>
+        </article>
+        {{!-- <article>
+            <form class="comment-form">
+                <div>
+                    <textarea name="comment-body"></textarea>
+                </div>
 
-    <form class="comment-form">
-        <div>
-            <textarea name="comment-body"></textarea>
-        </div>
-
-        <div>
-            <button type="submit">add comment</button>
-        </div>
-    </form>
+                <div>
+                    <button type="submit">add comment</button>
+                </div>
+            </form>
+        </article> --}}
+        <article>
+            {{!-- {{> comments post.comments}} --}}
+        </article>
+    </div>
 </section>
-
-{{> comments post.comments}}
 <script src="/javascript/edit-post.js"></script>
 <script src="/javascript/delete-post.js"></script>
-<script src="/javascript/comment.js"></script>
+{{!--
+<script src="/javascript/comment.js"></script> --}}
