--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,12 +1,13 @@
 <div class="comments">
     {{#each this}}
-    <section class="comment">
+    {{!-- <section class="comment"> --}}
         <div class="meta">
             {{user.username}} on {{format_date created_at}}
         </div>
         <div class="text">
             {{comment_text}}
         </div>
-    </section>
+        {{!--
+    </section> --}}
     {{/each}}
 </div>
