--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -23,8 +23,11 @@
                 <button type="submit">Save post</button>
                 <button type="button" class="delete-post-btn">Delete post</button>
             </form>
-        </article>
-        {{!-- <article>
+            <hr>
+            <h2>
+                Comments
+            </h2>
+            {{> comments post.comments}}
             <form class="comment-form">
                 <div>
                     <textarea name="comment-body"></textarea>
@@ -34,13 +37,11 @@
                     <button type="submit">add comment</button>
                 </div>
             </form>
-        </article> --}}
-        <article>
-            {{!-- {{> comments post.comments}} --}}
+
         </article>
     </div>
 </section>
 <script src="/javascript/edit-post.js"></script>
 <script src="/javascript/delete-post.js"></script>
-{{!--
-<script src="/javascript/comment.js"></script> --}}
+
+<script src="/javascript/comment.js"></script>
