--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,7 +121,7 @@ header {
 }
 
 header h1 a {
-  font-family: 'Share Tech Mono', monospace;
+  font-family: 'Share Tech', monospace;
   font-size: 1.75em;
   font-weight: strong;
   color: #eaef3a;
