--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,29 +1,35 @@
 <section>
-    <h2>Create New Post</h2>
+    <article>
 
-    <form class="new-post-form">
-        <div>
-            <label for="post-title">Title</label>
-            <input type="text" id="post-title" name="post-title" />
+        <h2>Create New Post</h2>
+        <div class="center-content">
+            <form class="new-post-form">
+                <div>
+                    <label for="post-title">Title</label>
+                    <input type="text" id="post-title" name="post-title" />
+                </div>
+                <div>
+                    <label for="post-body">Text</label>
+                    <textarea id="post-body" name="post-body"></textarea>
+                </div>
+                <button type="submit" class="btn">Create</button>
+            </form>
         </div>
-        <div>
-            <label for="post-body">Text</label>
-            <textarea id="post-body" name="post-body"></textarea>
-        </div>
-        <button type="submit" class="btn">Create</button>
-    </form>
+        {{#if posts.length}}
 
-    {{#if posts.length}}
+        <h2>Your Posts</h2>
+        <ol>
+            {{#each posts as |post|}}
+            <li>
+                {{> post-info post}}
+                <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+            </li>
+            {{/each}}
+        </ol>
 
-    <h2>Your Posts</h2>
-    <ol>
-        {{#each posts as |post|}}
-        <li>
-            {{> post-info post}}
-            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-        </li>
-        {{/each}}
-    </ol>
+        {{/if}}
+
+    </article>
+
 </section>
-{{/if}}
 <script src="/javascript/add-post.js"></script>
