--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="form-center">
-    <section>
+    <div class="section-form">
         <form class="login-form">
             <div>
                 <label for="username-login">username:</label>
@@ -18,5 +18,5 @@
         <br>
         No account? <a href="/signup">Sign up</a> instead!
         <script src="/javascript/login.js"></script>
-    </section>
+    </div>
 </div>
