--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <div class="form-center">
-    <section>
+    <div class="section-form">
         <form class="signup-form">
             <div>
                 <label for="username-signup">username:</label>
@@ -14,8 +14,11 @@
             <div>
                 <button type="submit">signup</button>
             </div>
-        </form><br>
-        Have an account? <a href="/login">Login instead!</a>
-    </section>
+
+        </form>
+        <div>Have an account? <a href="/login">Login instead!</a>
+        </div>
+    </div>
 </div>
+
 <script src="/javascript/signup.js"></script>
