Touched up header styles and mobilized header/sections.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,8 @@
             <div class="right"><a href="/">homepage</a></div>
             <h1>
                 <a href="/"><span class="headbracket">{ </span><span class="headmini">the</span>TECH<span
-                        class="headmini">blog</span><span class="headbracket"> }</span></a>
+                        class="headmini">blog</span><span class="headbracket">
+                        }</span></a>
             </h1>
             <nav>
                 {{#if loggedIn}}
@@ -50,7 +51,8 @@
         {{else}}
         Thanks for visiting!
         {{/if}}<br>
-        <span class="copy">© the TECH blog</span>
+        <span class="copyends">© the</span><span class="copytech"> TECH
+        </span></span><span class="copyends">blog</span>
     </footer>
 
     {{#if loggedIn}}
