--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ body, html {
   height: 100%;
   padding: 0;
   margin: 0 0 100px; 
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #333;
 }
 
@@ -63,7 +63,7 @@ textarea, input {
 
 textarea:focus, input:focus {
   outline: none;
-  border: 1px solid #3486eb;
+  border: 1px solid #fa4568;
 }
 
 textarea {
@@ -148,6 +148,19 @@ h1 {
   padding-left:5px;
 }
 
+h2 {
+  font-size: 170%;
+  color:  #000;
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+h3 {
+  font-size: 150%;
+  margin-bottom: 5px;
+  letter-spacing: 2px;
+}
+
 header h1 a:hover {
   color:#f99535 !important;
 }
@@ -166,7 +179,7 @@ header h1 a:hover {
 
 .headbracket {
   font-size: 4vh;
-  font-family: helvetica;
+  font-family: 'Roboto', sans-serif;
   color: #fa4568;
 }
 
@@ -212,7 +225,7 @@ section {
   margin-bottom: 25px;
   background: rgba(255, 255, 255, 0.95);
   /* width: 55%; */
-  border: 1px solid #00378e;
+  border: 1px solid #fa4568;
   border-radius: 25px;
   display: flex;
   justify-content: left;
@@ -239,7 +252,7 @@ article {
   margin-bottom: 25px;
   background: rgba(255, 255, 255, 0.95);
   width: 100%;
-  border: 1px solid #00378e;
+  border: 1px solid #fa4568;
   border-radius: 25px;
   min-width: 375px;
   /* margin-bottom: 100px; */
@@ -262,7 +275,7 @@ article {
   margin-bottom: 25px;
   background: rgba(255, 255, 255, 0.95);
   /* width: 55%; */
-  border: 1px solid #00378e;
+  border: 1px solid #fa4568;
   border-radius: 25px;
   /* display: flex;
   justify-content: center; */
@@ -318,6 +331,12 @@ article {
   
 }
 
+.diamond {
+  text-align:center;
+  color: #fa4568;
+  font-size: 1.2em;
+}
+
 .post .title span {
   font-style: italic;
   font-size: 90%;
@@ -339,11 +358,17 @@ article {
 }
 
 .comment:nth-child(odd) {
-  background-color: #fff5eb;
+  background-color: #d4e8ec;
+}
+
+.byline {
+  font-size: 90% !important;
+  margin-bottom: 15px;
+  color: #0067e8;
 }
 
 .comment .meta {
-  font-size: 90%;
+  font-size: 90% !important;
   margin-bottom: .5%;
   opacity: .6;
 }
@@ -382,20 +407,24 @@ footer {
 
 .welcome {
   color:  #eaef3a;
+  letter-spacing: 2px;
 }
 
 .logged-in {
   font-size: .7em;
+  letter-spacing: 1px;
 }
 
 .copytech {
   font-size: 12px;
   color: #fa4568;
+  letter-spacing: 2px;
 }
 
 .copyends {
   font-size: 12px;
   color: #fff;
+  letter-spacing: 2px;
 }
 
 @media screen and (max-width: 800px)  {
