--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,30 +1,31 @@
 <section>
     <article>
-        <h2>Create New Post</h2>
+        <h2>Your Dashboard</h2>
         <div class="center-content">
             <form class="new-post-form">
                 <div>
-                    <label for="post-title">Title</label>
-                    <input type="text" id="post-title" name="post-title" />
+                    {{!-- <label for="post-title">Title</label> --}}
+                    <input type="text" id="post-title" name="post-title" value="Title it!" />
                 </div>
                 <div>
-                    <label for="post-body">Text</label>
-                    <textarea id="post-body" name="post-body"></textarea>
+                    {{!-- <label for="post-body">Text</label> --}}
+                    <textarea id="post-body" name="post-body">Write it!</textarea>
                 </div>
                 <button type="submit" class="btn">Create</button>
             </form>
         </div>
+        {{!-- <div class="diamond">&#x2666; &#x2666; &#x2666;</div> --}}
         {{#if posts.length}}
 
-        <h2>Your Posts</h2>
-        <ol>
-            {{#each posts as |post|}}
-            <li>
-                {{> post-info post}}
-                <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-            </li>
-            {{/each}}
-        </ol>
+        {{!-- <h2>Posts</h2> --}}
+
+        {{#each posts as |post|}}
+        <div class="diamond">&#x2666; &#x2666; &#x2666;</div>
+        {{> post-info post}}
+        <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+
+        {{/each}}
+
 
         {{/if}}
 
