--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -10,7 +10,7 @@
                 <input name="post-title" type="text" value="{{post.title}}" />
             </div>
             <div>
-                <textarea name="post-body" type="text" value="{{post.post_body}}" />{{post.post_body}}</textarea><br>
+                <textarea name="post-body" type="text" />{{post.post_body}}</textarea><br>
             </div>
             <div>
                 By you on {{format_date post.created_at}}
