Fixed mobile display issue on homepage.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
                 </div>
                 <div>
                     {{!-- <label for="post-body">Text</label> --}}
-                    <textarea id="post-body" name="post-body">Write it!</textarea>
+                    <textarea id="post-body" name="post-body">Blog it!</textarea>
                 </div>
                 <button type="submit" class="btn">Create</button>
             </form>
