Added friendly error messages to login/signup js.  Added titles to login/signup pages.

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,6 @@
 <div class="form-center">
     <div class="section-form">
+        <h2>Sign up</h2>
         <form class="signup-form">
             <div>
                 <label for="username-signup">username:</label>
