--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <div class="form-center">
     <div class="section-form">
+        <h2>Login</h2>
         <form class="login-form">
             <div>
                 <label for="username-login">username:</label>
